# Template_SDL2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: defs.h  draw.h  input.h  structs.h  utils.h
src/: draw.c  input.c  main.c  utils.c
